v2: cache-bust CSS link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Recouple</title>
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="images/icons/icon-192.png">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css?v=2">
 </head>
 <body>
 
